change user log in to google log in

--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -50,6 +50,11 @@
   color: darkgreen;
 }
 
+.sign-in-button {
+  display: flex;
+  justify-content: center;
+}
+
 .grey-line {
   height: 2px;
   width: 500px;
